# gaming_workforce_observatory

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  SECURITY.md  app.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  secrets_template.toml  setup.py  streamlit_app.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATEA/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  security.yml
.streamlit/: secrets.toml.example
backups/: .gitkeep
components/: page_template.py
config/: app_config.py  constants.py  kpi_definitions.yml  ml_models_config.yml  settings.py  themes.py
data/: gaming_workforce_employees_advanced.csv  gaming_workforce_projects_advanced.csv  sample_data.csv
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  nginx.conf
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  api_reference.md  demo_guide.md
monitoring/: alerts.py  health_check.py  metrics.py
pages/: 00_🏠_Executive_Dashboard.py  01_⚔️_Talent_Wars.py  02_🧠_Neurodiversity_ROI.py  03_🎯_Predictive_Analytics.py  04_🌍_Global_Studios.py  05_💰_Compensation_Intel.py  06_🔮_Future_Insights.py  07_⚙️_Admin_Panel.py
scripts/: backup_scripts.py  data_validation.py  deployment_helpers.py  generate_sample_data.py
src/analytics/: crunch_analyzer.py  neurodiversity_roi.py  skills_gap_analyzer.py  talent_pipeline.py
src/core/: cach_manager.py  performance_monitor.py  session_manager.py
src/data/: kpis.py  loader.py
src/data/connectors/: api_glassdoor.py  api_linkedin.py  database.py
src/data/processors/: neurodiversity_processor.py  salary_processor.py  studio_processor.py
src/data/validators/: data_quality.py  schema_validator.py
src/ml/: gaming_models.py
src/ml/evaluators/: model_analyzer.py  performance_tracker.py
src/ml/models/: anomaly_detector.py  (+4 more)
src/themes/: gaming_themes.py  ubisoft_premium.py
src/utils/: audit_logger.py  charts.py  data_fixes.py  export_manager.py  navigation.py  notification_manager.py  styling.py  ubisoft_components.py
src/visualizations/: geographic_maps.py  interactive_charts.py  network_graphs.py  real_time_dashboard.py
tests/: test_app.py  test_charts.py  test_data_loader.py  test_gaming_functions.py  test_kpis.py  test_streamlit_app.py  test_ui_interactions.py
tests/fixtures/: test_data.csv
(+3 files in other folders)
